# VlsiFinal

./: .gitignore  CMakeLists.txt  README.md
example/: CASE1.input  CASE2-1.input  CASE2-2.input  CASE2-3.input  CASE3.input  CASE4.input
src/: BirdDetailRouter.hpp  Bit.hpp  Bus.hpp  DetailRouter.hpp  DisjointSet.hpp  Edge.hpp  FenwickTree.hpp  GlobalRouter.hpp  GlobalRoutingPath.hpp  GraphConstructor.hpp  InputReader.hpp  Layer.hpp  Logger.hpp  Makefile  NaiveDetailRouter.hpp  Net.hpp  Obstacle.hpp  OutputGenerator.hpp  Pin.hpp  Point.hpp  Preprocess.hpp  Rectangle.hpp  SegmentMap.hpp  Track.hpp  Vertex.hpp  VertexUsage.hpp  loglog  main.cpp  output.route  runall.sh  verifier.cpp
src/output/: CASE1.route  CASE2-1.route  CASE2-2.route  CASE2-3.route  CASE3.route  CASE4.route  example_1.route
